--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -9,14 +9,9 @@
   weight = 10
 
 [[main]]
-  name = "Posts"
+  name = "My Projects"
   url = "#posts"
   weight = 20
-
-[[main]]
-  name = "Projects"
-  url = "#projects"
-  weight = 30
 
 [[main]]
   name = "Contact"
